[package]
name = "geoproxy"
version = "0.1.0"
authors = ["Jacek Całusiński <forger@forger.pl>"]
edition = "2018"

[workspace]

[dependencies]
hyper = "0.12.30"
serde = "1.0.92"
serde_json = "1.0.39"
failure = "0.1.5"
clap = "2.33.0"
log = "0.4.6"
serde_derive = "1.0.92"
url = "1.7.2"
url_serde = "0.2.0"
http = "0.1.17"
cadence = "0.17.1"
env_logger = "0.6.1"
chrono = "0.4.6"

[dependencies.geoindex]
optional = false
path = "geoindex"

[dependencies.geo-types]
version = "0.4.3"
features = ["serde"]
